--- a/index.html
+++ b/index.html
@@ -149,8 +149,14 @@
     </div>
 
     <div class="seven">
-        
+
     </div>
+    <footer>
+        <img class="logo" src="./img/circle.png" alt="circle">
+        <div>The San Diego County Prosperity Foundation is the 501(c)(3) fiscal sponsor of the Ukraine Freedom Project.</div>
+        <md-text-button class="menuButton">IRS Determination Letter</md-text-button>
+        <md-text-button class="menuButton">Privacy Policy</md-text-button>
+    </footer>
 
 </body>
 </html>
